[Task] Create request
